# complex-wing

./: .gitignore  README.md  start.sh  stop.sh  test.sh
project-be-books/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
project-be-books/app/: tasks.py  urls.py
project-be-books/app/apis/: book_search_api.py  review_api.py  review_create_api.py
project-be-books/app/migrations/: 0001_initial.py
project-be-books/app/models/: __init__.py  review.py
project-be-books/app/services/: book_service.py  review_service.py
project-be-books/config/: settings.py  urls.py
project-be-books/tests/: utils.py
project-be-books/tests/apis/: test_book_search_api.py  test_review_api.py  test_review_create_api.py
project-be-books/tests/models/: review_builder.py
project-be-books/tests/services/: mock_gutenedex_api.py  test_gutendex_api.py
task-golang/: main_test.go  measured_worker.go
